Atualização do modelo

--- a/capitulos/cap_01.tex
+++ b/capitulos/cap_01.tex
@@ -13,7 +13,7 @@ Para garantir a qualidade e a uniformidade dos trabalhos acadêmicos produzidos 
 
 Este Modelo de Dissertação foi construído em \LaTeX \footnote{\LaTeX\, é um sistema de preparação de documentos de alta qualidade, amplamente utilizado na comunidade acadêmica e científica para a criação de documentos técnicos e científicos. Baseado no sistema de tipografia \TeX\,, desenvolvido por Donald Knuth, o \LaTeX\, oferece um controle preciso sobre a formatação de texto, equações matemáticas, tabelas e referências bibliográficas, tornando-se uma ferramenta poderosa para a produção de artigos, dissertações, teses e livros. Ele é especialmente apreciado por sua capacidade de lidar com fórmulas complexas e por produzir documentos com um acabamento profissional \cite{latex-projeto}.}, utilizando a classe \abnTeX\footnote{A suíte \abnTeX\, é composta por uma classe, por pacotes de citação e de formatação de estilos bibliográficos que atende os requisitos das normas ABNT para elaboração de documentos técnicos e científicos brasileiros \cite{abntex-projeto}.}. Foram realizadas customizações que tornam modelo compatível com as Normas da Associação Brasileira de Normas Técnicas (ABNT), com o Manual de Normas de Apresentação Tabular do Instituto Brasileiro de Geografia e Estatística \cite{ManualIBGE}, além de estar em concordância com o Manual de normalização para elaboração de trabalhos acadêmico-científicos da Universidade Federal do Tocantins \cite{ManualUFT}.
 
-Este Modelo de Dissertação é compatível com as seguintes normas da Associação Brasileira de Normas Técnicas (ABNT):
+A presente versão é compatível com as seguintes normas da Associação Brasileira de Normas Técnicas (ABNT):
 
 \begin{itemize}
 	\item ABNT NBR 14724:2011 - Informação
@@ -40,8 +40,8 @@ e documentação: resumo, resenha e recensão: apresentação \cite{nbr6028};
 e documentação: índice: apresentação \cite{nbr6034}.
 \end{itemize} 
 
-Assim, espera-se que os discentes do PROFMAT/UFT possam produzir documentos acadêmicos que atendam aos padrões exigidos pela comunidade científica, contribuindo para a sua formação e para o avanço do conhecimento na área de ensino da matemática.
+Assim, espera-se que os discentes do Programa de Mestrado em Matemática PROFMAT/UFT possam produzir documentos acadêmicos que atendam aos padrões exigidos pela comunidade científica, contribuindo para a sua formação e para o avanço do conhecimento na área de ensino da matemática. É importante que a dissertação reflita a natureza da pesquisa realizada e atenda aos padrões acadêmicos exigidos pelo programa de pós-graduação.
 
-No que segue, o modelo de dissertação será descrito em detalhes.
+A estrutura apresentada a seguir serve apenas como um exemplo geral. Cada autor deve adaptar essa estrutura às necessidades específicas de seu trabalho de pesquisa, considerando as recomendações do orientador, bem como as particularidades do seu tema de estudo. 
 
 
