--- a/capitulos/cap_05.tex
+++ b/capitulos/cap_05.tex
@@ -1,5 +1,7 @@
 %----------------Cap_05----------------%
 
-\chapter{CONCLUSÃO}
+\chapter{CONSIDERAÇÕES FINAIS}
 
-Este é o último capítulo da dissertação. Nele, devem ser apresentadas as considerações finais a respeito da pesquisa realizada,  se os objetivos estabelecidos foram alcançados dentre outras informações relevantes.
+As Considerações Finais sintetizam os principais achados da pesquisa, reiterando como os objetivos propostos foram atingidos. Neste capítulo, o autor deve resumir as contribuições teóricas e práticas do estudo, destacando sua relevância e impacto no campo da Matemática. É importante reforçar as principais descobertas e discutir como elas avançam o conhecimento existente, seja por meio do desenvolvimento de métodos inovadores ou da aplicação de teorias matemáticas a novos problemas.
+
+Além de resumir os principais resultados, as Considerações Finais devem também abordar as limitações do estudo, oferecendo uma visão equilibrada e realista das contribuições feitas. Isso inclui discutir quaisquer restrições metodológicas ou teóricas encontradas ao longo da pesquisa e sugerir áreas para investigações futuras. Ao identificar as lacunas que ainda precisam ser preenchidas, o autor contribui para o delineamento de novas linhas de pesquisa, promovendo o desenvolvimento contínuo da disciplina matemática.
