--- a/customizacoes.tex
+++ b/customizacoes.tex
@@ -25,6 +25,7 @@
 \usepackage{tocloft}
 \usepackage{longtable, ltcaption}
 \usepackage{newfloat}
+\usepackage{tikz}
 % ---
 % ---
 % Pacote de citações
